2005-11-09  Martin Hunt  <hunt@redhat.com>

	* translate.cxx: New API uses HIST_LOG and HIST_LINEAR
	instead of HSTAT_LOG and HSTAT_LINEAR.

2005-11-09  Frank Ch. Eigler  <fche@elastic.org>

	Reported by Guang Lei Li <liguangl@cn.ibm.com>:
	* tapset/context.stp (pid,ppid,tid): Correctly pick tgid vs pid.
	* testsuite/buildok/context_test.stp: Print out tid() too.

2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (blacklisted_p): Tolerate NULL filename parameter.
	* src/testsuite/semok/twenty.stp: New test to enumerate everything
	dwarfly probeable.

2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	* translate.cxx (c_unparser::visit_foreach_loop): With PR 1275
	done, add back read lock around foreach loop.  Add a write lock
	around preceding sort operation.  Leave a race condition window. :-(

2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	* translate.cxx (mapvar::exists): Correct some more.

2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	Patch from "Mao, Bibo" <bibo.mao@intel.com>
	* translate.cxx (mapvar::exists): Correct 64-bit type mismatch.

2005-11-08  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (blacklisted_p): Add blacklist for some .return
	probes to kludge around bug #1345.
	* tapset/system_calls.stp: Add some %( %? %) conditionals to
	get closer to using tapset on 2.6.9 kernel.

2005-11-07  Frank Ch. Eigler  <fche@redhat.com>

	PR 1828.
	* tapsets.cxx (blacklisted_p): New function.  Add a few blacklist
	entries.
	* testsuite/semko/thirtythree.stp: New test.

2005-11-07  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/buildok/twentytwo.stp: Add another test for PR 1271.

2005-11-04  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (dwarf_derived_probe::emit_registrations): Add
	possible kprobe address prechecking logic.  Set kretprobes
	maxactive to zero.
	* translate.cxx (emit_module_init): Set a more helpful default
	probe_point value for use in registration errors.  Exit properly