@@ -1,3 +1,8 @@
+2005-11-10  Frank Ch. Eigler  <fche@elastic.org>
+
+	* translate.cxx (c_unparser::visit_array_in, visit_arrayindex):
+	Finish adapting to PR 1275 by switching back to read locks.
+
 2005-11-09  Martin Hunt  <hunt@redhat.com>
 
 	* translate.cxx: New API uses HIST_LOG and HIST_LINEAR
